tests/rosetta/transpiler/FS/bernoulli-numbers.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/bernoulli-numbers.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Bernoulli-numbers' based on the file name 'bernoulli-numbers.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/bernoulli-numbers.fs(26,25): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bernoulli-numbers.fs(26,54): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bernoulli-numbers.fs(29,24): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bernoulli-numbers.fs(32,42): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bernoulli-numbers.fs(32,62): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bernoulli-numbers.fs(35,37): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bernoulli-numbers.fs(58,12): error FS0039: The type 'bignum' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bernoulli-numbers.fs(59,14): error FS0039: The value or constructor 'num' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bernoulli-numbers.fs(60,38): error FS0039: The value or constructor 'num' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/bernoulli-numbers.fs(61,38): error FS0039: The value or constructor 'denom' is not defined
